package org.example;

public interface Topografia {

    double calcularProporcionAgua();
    double calcularProporcionTierra();
    boolean compararTopografias(Topografia topografia);

}
